# Aurex

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
Aurex-AMDUDA/: README_codex.md
amduda/: Cargo.toml  README.md  architecture.md  roadmap.md
amduda/benches/: simd_vs_scalar.rs
amduda/examples/: fused_tensor_ops.rs  jit_attention.rs  procedural_fsm_demo.py  run_llama7b_int4.py
amduda/src/: lib.rs
amduda/src/amduda_core/: jit_compiler.rs  memory_tiering.rs  mod.rs  procedural_fsm.rs  tensor_ops.rs
amduda/src/aurex_lm/: mod.rs  model_loader.rs  paged_attention.rs  quantizer.rs
amduda/src/hal_backends/: cpu_simd.rs  mod.rs  opencl_backend.rs  riscv_backend.rs  rocm_backend.rs  sycl_backend.rs  vulkan_backend.rs
amduda/tests/: backend_selection.rs  jit_compiler.rs  rocm_backend.rs  test_jit_compiler.rs  test_memory_tiering.rs  test_model_loader.rs  test_paged_attention.rs  test_procedural_fsm.rs  test_quantization.rs  test_tensor_ops.rs  test_tensor_ops_memory.rs  vulkan.rs
amduda/tests/rocm/: basic.rs
amduda/tests/vulkan/: basic.rs
aurex-agent/: Cargo.toml
aurex-backend/: Cargo.toml
aurex-cli/: Cargo.toml  README.md
aurex-kernel/: Cargo.toml
aurex-runtime/: Cargo.toml
aurex-utils/: Cargo.toml
docs/: amduda-codex-prompt-library.md  api-reference.md  architecture.md  backend-setup.md  design.md  developer-onboarding.md  knowledge-map.md  roadmap.md  runtime_flow.md  tensor_ops.md
examples/: .gitignore  cli.rs  edge_deployment.rs  llm_agent.rs  model_config.json  vulkan_demo.rs
tests/: agent_loop.rs  multi_backend_inference.rs
(+40 files in other folders)
