[package]
name = "amduda"
version = "0.1.0"
edition = "2021"

[lib]
name = "amduda"
path = "src/lib.rs"

[dependencies]
aurex-runtime = { path = "../aurex-runtime" }
llvm-sys = "150"
once_cell = "1"
hip-runtime-sys = { version = "0.1.1", optional = true }
ash = { version = "0.37", default-features = false, features = ["loaded"] }
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }

[features]
default = []
rocm = ["hip-runtime-sys"]
