[package]
name = "amduda"
version = "0.1.0"
edition = "2021"

[lib]
name = "amduda"
path = "src/lib.rs"

[dependencies]
aurex-runtime = { path = "../aurex-runtime" }
llvm-sys = { version = "150", optional = true }
once_cell = "1"
hip-runtime-sys = { version = "0.1.1", optional = true }
ash = { version = "0.37", default-features = false, features = ["loaded"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
criterion = "0.5"
tempfile = "3"
serial_test = "2"

[features]
default = []
rocm = ["hip-runtime-sys"]
jit = ["llvm-sys"]

[[bench]]
name = "simd_vs_scalar"
harness = false
